# cmocka-meson-build

./: README.md  meson.build
config_native/: meson.build
config_target/: meson.build
